07/05/2025  	11:46 	Davide Laghi 		Added and defined a new image to images.
07/05/2025  	11:58 	Davide Laghi 		Added footer and made Card stay in different collums to the shopping cart.
07/05/2025	12:17	Daniele Chiarion	Add the admin part where to add the items of the site. 
09/05/2025	20:52	Daniele Chiarion	Change the configurator dimensions and colors. Replacing max length with the car type (coupé, suv ecc.)
10/05/2025  	10:52 	Davide Laghi 		Added Footer to the purchase list.
12/05/2025	17:14	Daniele Chiarion	Add id to the my pages for a future js implementation. 
12/05/2025	19:52	Daniele Chiarion	Completed add-car part for the admin
12/05/2025	20:12	Daniele Chiarion	Add car-brand section for admin
12/05/2025	20:40	Daniele Chiarion	Add optional section for admin
13/05/2025	10:19	Daniele Chiarion	Add html page to test if all the elements are ready
13/05/2025	11:06	Daniele Chiarion	Change the admin settings page with the choice of the file
13/05/2025	11:06	Daniele Chiarion	Add carousel with images in the car details
21/05/2025	18:39	Daniele Chiarion	Add .js code for pagination and spacer between footers and navbars. 
23/05/2025	17:56	Daniele Chiarion	Add .js code to show the sliders value on the configurator page.
23/05/2025	17:12	Daniele Chiarion	Do the same thing done before for the admin add-items page. 
23/05/2025	17:55	Daniele Chiarion	Add .js to remember the previous page. 
25/05/2025	14:55	Daniele Chiarion	Completed .js backend for car elements and vehicles.
25/05/2025	15:10	Daniele Chiarion	Completed .js backend for operation (only purchase is now necessary)
25/05/2025	15:35	Daniele Chiarion	Completed .js backend part for user and account functions.
25/05/2025	16:00	Daniele Chiarion	Completed .js backend class to manage a showroom.
25/05/2025	16:11	Daniele Chiarion	Completed .js backend class to manage the users.
25/05/2025	16:27	Daniele Chiarion	Add backend methods to save and load classes using the localStorage.