@@ -54,3 +54,4 @@ DATE		HOUR	AUTHOR			DESCRIPTION
 25/05/2025	16:00	Daniele Chiarion	Completed .js backend class to manage a showroom.
 25/05/2025	16:11	Daniele Chiarion	Completed .js backend class to manage the users.
 25/05/2025	16:27	Daniele Chiarion	Add backend methods to save and load classes using the localStorage.
+26/05/2025	17:05	Daniele Chiarion	Add toJSON and fromJSON method for each class to be saved on localStorage.
